apps/Conduit-UI/src/theme/global.css
/* width */
body *::-webkit-scrollbar {
    width: 6px !important;
    height: 6px !important;
}

/* Track */
body *::-webkit-scrollbar-track {
    background: #202030;
    border-radius: 99px !important;
}

/* Handle */
body *::-webkit-scrollbar-thumb:hover {
    background: #5B44F2;
    border-radius: 99px !important;

}

/* Handle */
body *::-webkit-scrollbar-thumb {
    background: #5B44F2;
    border-radius: 99px !important;

}

/* Handle on hover */
body *::-webkit-scrollbar-track:hover {
    background: #E6D2AA20;
}

